# ioc-knowledge-memory

./: .env.example  .flake8  .gitignore  .legitignore  CONTRIBUTING.md  Dockerfile  Makefile  PACKAGING.md  README.md  SECURITY.md  Taskfile.yaml  docker-compose.yml  docker-entrypoint.sh  install.sh  openapi-spec.yaml  pyproject.toml  runme.sh  setup.py  sonar-project.properties
.github/workflows/: ci.yaml  publish-db-manual-image.yaml
app/: requirements.txt
app/src/: common.py  health_check.py  main.py  server.py
app/src/api/: api.py
app/src/api/endpoints/: workspaces.py
app/src/models/: api_key.py
app/src/schemas/: workspace.py
app/src/storage/: memory.py
deploy/charts/ci-tkf-data-logic-server/: Chart.yaml  values.yaml
deploy/charts/ci-tkf-data-logic-server/templates/: namespace.yaml
deploy/charts/ci-tkf-data-logic-svc/: Chart.yaml  values.yaml
deploy/charts/ci-tkf-data-logic-svc/templates/: alerts.yaml  namespace.yaml
docker-db/: Dockerfile  README.md  docker-compose.yml  init-extensions.sql
docs/: knowledge-kvp-api-sequence.md  knowledge-vector-api-sequence.md
scripts/: atlas_migrate.py  generate_DEK.py  lint.sh  populate_software.sql  unit-test.sh
src/app_logging/: __init__.py  logger.py
src/knowledge_memory/: README.md  __init__.py  examples.py  exceptions.py  knowledge_graph.py  knowledge_vector.py  setup.py
src/knowledge_memory/bootstrap/: app_factory.py  database.py  lifespan.py  provider.py
src/server/: __init__.py  atlas.hcl  common.py  config.json  diagnostics.py  health_check.py  main.py  mock_services.py  test_diagnostics.py
src/server/adapters/: adapter_graphdb_agensgraph.py  adapter_graphdb_neo4j.py  test_adapter_graphdb_agensgraph.py  test_adapter_graphdb_neo4j.py
src/server/api/: __init__.py  api.py  exception_handlers.py
src/server/api/endpoints/: __init__.py  api_keys.py  audit.py  knowledge_adapters.py  knowledge_graph.py  knowledge_kvp.py  knowledge_vector.py  mas.py  reasoners.py  softwares.py  test_knowledge_graph.py  test_knowledge_kvp.py  test_knowledge_vector.py  test_tkf.py  tkf.py  users.py  workspaces.py
src/server/database/: config.py  connection.py  schema_generator.py
src/server/database/graph_db/neo4j/: README.md
src/server/database/models/: software.py
src/server/database/postgres/: db.py
src/server/database/relational_db/: README.md  atlas.hcl  db.py
src/server/database/relational_db/docker/: db.yaml
src/server/database/relational_db/migrations/: 20251125234207_software table.sql  20251201192513_update software table type field length.sql  20251203175820_add users table.sql  20251203180059_users_table_chage_role_len.sql  20251211000001_add multi_agentic_systems table.sql  20251211000002_add reasoners table.sql  20251211000003_add knowledge_adapters table.sql  20251211181756_add_audits_table.sql  20251211185854_add_audits_table_status.sql  20251211205435_update_audits_table_fields.sql  20251211220848_update_audits_table_nit.sql  20251215231222_update audits table field limits.sql  20251216000001_add workspaces table.sql  20251216124334_add_multi_agentic_systems_table.sql  20251216125020_add_reasoners_table.sql  20251216125530_add_knowledge_adapters_table.sql  20251216212210_audits_table_fix_created_updated_delted_by_fields.sql  20251217002748_audit_table_updates_for_audit_info.sql  (+11 more)
src/server/migrations/: 20251120202751_Initial software table.sql  20251120203234_add api_key_id to software table.sql  20251120212606_update field type in software table.sql  20251121004536_revert field type in software table.sql  atlas.sum
src/server/models/: api_key.py  software.py  user.py  workspace.py
src/server/schemas/: __init__.py  api_key.py  audit.py  knowledge_adapter.py  knowledge_graph.py  knowledge_graph_utils.py  knowledge_keyvalue.py  knowledge_vector.py  multi_agentic_system.py  reasoner.py  software.py  test_knowledge_graph.py  test_knowledge_graph_utils.py  test_knowledge_keyvalue.py  test_tkf.py  tkf.py  user.py  workspace.py
src/server/services/: __init__.py  audit.py  knowledge_adapter.py  knowledge_graph.py  knowledge_keyvalue.py  knowledge_vector.py  mas.py  reasoner.py  software.py  tkf.py  user.py  workspace.py
src/server/storage/: memory.py
src/server/utils/: __init__.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_api_keys.py  test_async_functions.py  test_knowledge_adapters.py  test_knowledge_memory.py  test_mas.py  test_reasoners.py  test_server.py  test_users.py  test_workspaces.py
(+31 files in other folders)
