[project]
name = "ci-tkf-data-logic-svc"
version = "0.1.0"
description = "TKF Data Logic Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0", 
    "prometheus-fastapi-instrumentator==6.1.0",
    "email-validator==2.1.1",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.11.0", 
    "flake8==6.1.0",
    "httpx==0.28.1",
]

[tool.poetry]
packages = [{include = "server", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
prometheus-fastapi-instrumentator = "6.1.0"
email-validator = "2.1.1"
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
black = "23.11.0"
flake8 = "6.1.0"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]